<?xml version="1.0" encoding="utf-8"?>
 
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">
 
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical" >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/endere_o_ftp_site_com_br_pasta_caminho_" />

    <EditText
        android:id="@+id/endeftp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/usu_rio"
        />

    <EditText
        android:id="@+id/usuaftp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        />

    <EditText
        android:id="@+id/senhftp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/url_de_recebimento"
        />

    <EditText
        android:id="@+id/urlr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btConfirmaFtp"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_weight="0.29"
            android:text="@string/confirmar"
            />

        <Button
            android:id="@+id/btCancelaFtp"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.37"
            android:text="@string/cancelar"
            />

    </LinearLayout>

</LinearLayout>
</ScrollView>
